fix bottom padding in cards on mobile

--- a/react-frontend/src/assets/css/style.styl
+++ b/react-frontend/src/assets/css/style.styl
@@ -1146,6 +1146,9 @@ div.float-random svg
   bottom: 40px
   width: 100%
 
+.above-card-select-bottom
+  padding-bottom: 72px
+
 div.inventory-card-custom
   position: absolute
   left: -24px
